--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
     <div id="viewport"></div>
     <script src="./dist/bundle.js"></script>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113132320-1"></script>
+     <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-113132320-1');
+     </script>
 </body>
 
 </html>
