feat(index.html & app/style/index.scss): add loading indicator

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
-     <title>petro pump</title>
-     <link href="./dist/stylesheets/main.css" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
+    <title>petro pump</title>
+    <link href="./dist/stylesheets/main.css" rel="stylesheet"/>
 </head>
 <body>
-    <div id="viewport"></div>
-    <script src="./dist/bundle.js"></script>
+<div id="viewport">
+    <p id="loading">loading</p>
+</div>
+<script src="./dist/bundle.js"></script>
 </body>
 
 </html>
